style.css
body {
    background-color: bisque;
    opacity: ;
    background-size: 20px 20px;
    background-image:  repeating-linear-gradient(0deg, rgb(233, 210, 190), rgb(233, 210, 190) 1px, rgb(255, 239, 220) 1px, rgb(255, 247, 236));
}

.content {
    max-width: 600px;
    padding: 0px 24px 20px 24px;
    margin: 48px auto;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: rgb(255, 248, 235);
    border-radius: 16px;
    border: 1px solid rgb(233, 210, 190);
    box-shadow: 0 8px 16px rgba(96, 57, 10, 0.308);;
}

h1, h2, p, li, figcaption, .menu-item a {
    color: rgb(96, 58, 10);
}

.menu {
    text-align: center;
    padding: 48px 0;
}

ul.nobullets {
    list-style-type: none;
    text-decoration: none;
    padding: 0;
    margin: 0;
}

.menu-item {
    font-size: 18px;
    padding: 8px;
    margin: 8px;
    border-radius: 8px;
}

.menu-item a {
    text-decoration: none;
}

.menu-item a:hover {
    text-decoration: underline;
}

img {
    mix-blend-mode: darken;
}

